ags (0.7.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* using AgsConversion in ags_line_member.c and ags_bulk_member.c if available
	* using bypass flag in ags_recall_audio_automate() and ags_recall_channel_automate()
	* using AgsConversion in automation editor
	* implemented reset of AGS_AUTOMATION_BYPASS in automation toolbar

ags (0.7.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove of menu after rename of AgsMachine
	* fixed update editor and automation editor after rename
	* fixed automation data
	* fixed missing XPath preamble of automation editor's machine radio button
	* fixed NULL pointer access in ags_automation_toolbar_apply_port()
	* implemented save/restore of ports within automation editor

ags (0.7.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed automation editor drawing while setting value with a different lower bound than 0.0
	* fixed setting value on AgsAcceleration likewise above
	* fixed freed name string of AgsMachine
	* optimized drawing of values by ommiting already drawn values within AgsAutomationArea

ags (0.7.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented loading automation ports of LADSPA, DSSI and Lv2 plugins
	* implemented adding automation data
	* implemented removing automation data

ags (0.7.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_set_audio_channels() to do proper setup
	* fixed ags_lv2_bridge_set_audio_channels() and ags_dssi_bridge_set_audio_channels() to iterate correctly
	* fixed show of newly created AgsLine as calling ags_machine_resize_audio_channels()
	* fixed scroll of AgsNotebook

ags (0.7.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed worst memory leaks
	* refactored gsequencer_main.c because it was a mess
	* refactored peak callback to use g_timeout_add() giving better performance
	* improved timer support
	* provided example file
